@@ -126,6 +126,8 @@ Library
 Extensions
 ----------
 
+- Issue #6518: Support context manager protcol for ossaudiodev types.
+
 - Issue #678250: Make mmap flush a noop on ACCESS_READ and ACCESS_COPY.
 
 - Issue #9054: Fix a crash occurring when using the pyexpat module
